Fix overflow

--- a/docs/css/theme.css
+++ b/docs/css/theme.css
@@ -314,6 +314,7 @@ th {
   padding: 0;
   font-size: 0.8rem;
   text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 /* TABLE OF CONTENTS */
